# dougsll-datamaster

./: .gitignore  README.md
.github/workflows/: 01_ingest.yml  01_setup.yml  02_ingest.yml  02_prep.yml  03_model.yml  03_prep.yml  04_model.yml  05_production.yml  bkp_helloworld.yml  bkp_setup_adb.yml  bkp_setup_adbcompute.yml  bkp_setup_adbunity.yml  bkp_setup_lakehouse_v2.yml  bricks.yml  create_workflow_ingest.yml  create_workflow_prep.yml  extra_quality.yml  helloworld.yml  ingest.yml  load_message_files.yml  main.yml  setup_abdunity.yml  setup_abdunity_extra.yml  setup_adb.yml  setup_adbcompute  setup_adbcompute.yml  setup_adbunity.yml  setup_create.yml  setup_destroy.yml  setup_lakehouse teste.yml  setup_lakehouse.yml  test.yml
assets/data_example/: account.csv
datamaster/jarvis_ingest/: datacontract.yaml
datamaster/jarvis_ingest/resource/: datacontract.yaml
datamaster/jarvis_prep/: datacontract.yaml
datamaster/jarvis_prep/definition_project/: README.md  pyproject.toml
datamaster/jarvis_prep/definition_project/definition_project/: main.py
datamaster/jarvis_prep/definition_project/tests/: test_main.py
datamaster/jarvis_prep/exploration/: README.md  exploration.ipynb
datamaster/jarvis_prep/resource/: datacontract.yaml
datamaster/strife_env/: strife_config.yaml
ingest_datacontract/: datacontract.yaml  datacontract_v2.yaml
jarvis_ingest/: datacontract.yaml
