[tool.poetry]
name = "definition-project"
version = "0.1.1"
description = ""
authors = ["Leal <douglas.sleal@outlook.com>"]
readme = "README.md"
packages = [{include = "definition_project"}]

[tool.poetry.scripts]
main = "definition_project.main:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.23"
mkdocstrings = "^0.26.1"
mkdocstrings-python = "^1.11.1"
mkdocs-macros-plugin = "^1.0.5"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=carlton -vv"
post_test = "coverage html"